# promodomo

./: LICENSE  README.md  Setup.hs  prepare-main-for-tests.sh  promodomo.cabal
.github/workflows/: haskell.yml
src/: Main.hs
src/week03/: SolutionWeek03.hs  week03-solution.hs  week03.hs
src/week04/: SolutionWeek04.hs  Week04.hs
src/week05/: SolutionWeek05.hs  Week05.hs
src/week06/: SolutionWeek06.hs  Week06.hs
src/week07/: SolutionWeek07.hs  Week07.hs
test/: TestUtils.hs  week03-tests.hs  week04-tests.hs  week05-tests.hs  week06-tests.hs
