cabal-version:       2.2

name:                promodomo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/promodomo#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:
    src
    src/week03
  exposed-modules:
    Week03
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5

executable promodomo
  hs-source-dirs:      
    src
    src/week03
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

Test-Suite Week03
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             week03-tests.hs
  build-depends:       base, promodomo
  default-language:    Haskell2010
