cabal-version:       2.2

name:                promodomo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/promodomo#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:
    src
    src/week03
    src/week04
    src/week05
  exposed-modules:
    Week03,
    SolutionWeek03,
    Week04,
    SolutionWeek04,
    Week05,
    SolutionWeek05
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5

executable promodomo
  hs-source-dirs:      
    src
    src/week03
    src/week04
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

Test-Suite Week03
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             week03-tests.hs
  other-modules:       TestUtils
  build-depends:       base, promodomo
  default-language:    Haskell2010

Test-Suite Week04
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             week04-tests.hs
  other-modules:       TestUtils
  build-depends:       base, promodomo
  default-language:    Haskell2010
